# miniKANREN

./: .gitignore  LICENSE  README.md
Python/: api.py  core.py  example_aoc2108.py  example_food.py  example_riddle.py  functional_data_structures.py  goals.py  stream.py  test_api.py  test_functional_data_structures.py  test_kanren.py  test_stream.py
R7RS/: kanren.sld  test.scm
rust/: Cargo.toml
rust-canonical/: Cargo.toml  README.md
rust-canonical/examples/: conds.rs  database.rs  hello.rs
rust-canonical/src/: acceptance_tests.rs  core.rs  database.rs  lib.rs  logic_variable.rs  macros.rs  peano.rs  prelude.rs  testing.rs
rust-canonical/src/core/: goal.rs  logic_variable.rs  pair.rs  stream.rs  structure.rs  substitution.rs  value.rs
rust-canonical/src/goals/: combinators.rs  hashmap.rs  list.rs  mod.rs  numbers.rs  primitive.rs
rust-canonical/src/new_core/: logic_variables.rs  mod.rs  object.rs  states.rs  value.rs
rust/src/: lib.rs
